update configs 2017 (CAREFUL updates also paths)

--- a/python/Wlv2017config/datacards.ini
+++ b/python/Wlv2017config/datacards.ini
@@ -71,21 +71,21 @@ weightF_sys = [
 ;    'TEST_vhbb_BtagMjj_TM_120_130',
 ;    'TEST_vhbb_BtagMjj_TM_130_140',
 ;    'TEST_vhbb_BtagMjj_TM_140_150',
-    'CMS_vhbb_VjetsBenriched_WBJets_2017_13TeV',
-    'CMS_vhbb_VjetsBenriched_WJetsBGenFilter_2017_13TeV',
-    'CMS_vhbb_VjetsBenriched_WBJets_RW_2017_13TeV',
-    'CMS_vhbb_VjetsBenriched_WJetsBGenFilter_RW_2017_13TeV',
-    'CMS_vhbb_Vjets_WBJets_RW_2017_13TeV',
-    'CMS_vhbb_Vjets_WJetsBGenFilter_RW_2017_13TeV',
-    'CMS_vhbb_Vjets_minJetPt',
+;    'CMS_vhbb_VjetsBenriched_WBJets_2017_13TeV',
+;    'CMS_vhbb_VjetsBenriched_WJetsBGenFilter_2017_13TeV',
+;    'CMS_vhbb_VjetsBenriched_WBJets_RW_2017_13TeV',
+;    'CMS_vhbb_VjetsBenriched_WJetsBGenFilter_RW_2017_13TeV',
+;    'CMS_vhbb_Vjets_WBJets_RW_2017_13TeV',
+;    'CMS_vhbb_Vjets_WJetsBGenFilter_RW_2017_13TeV',
+;    'CMS_vhbb_Vjets_minJetPt',
     'CMS_vhbb_Vpt150_13TeV',
     'CMS_vhbb_Vpt250_13TeV',
-    'CMS_vhbb_DeepCSV_TT',
-    'CMS_vhbb_DeepCSV_TM',
-    'CMS_vhbb_DeepCSV_TL',
-    'CMS_vhbb_DeepCSV_MM',
-    'CMS_vhbb_DeepCSV_ML',
-    'CMS_vhbb_DeepCSV_LL',
+;    'CMS_vhbb_DeepCSV_TT',
+;    'CMS_vhbb_DeepCSV_TM',
+;    'CMS_vhbb_DeepCSV_TL',
+;    'CMS_vhbb_DeepCSV_MM',
+;    'CMS_vhbb_DeepCSV_ML',
+;    'CMS_vhbb_DeepCSV_LL',
     'PileUp',
 ; pT(W) fit reweighting
 ;    'CMS_vhbb_topptreweighting_13TeV',
@@ -100,22 +100,22 @@ weightF_sys = [
 ; LO to NLO shape reweighting
     'CMS_vhbb_vjetnlodetajjrw_13TeV',
 ; 2017 version
-    'CMS_vhbb_vjetnlovptrw_13TeV',
-    'CMS_vhbb_vjetnlovptrw_ZJets0_13TeV',
-    'CMS_vhbb_vjetnlovptrw_ZJets1_13TeV',
-    'CMS_vhbb_vjetnlovptrw_ZJets2_13TeV',
-    'CMS_vhbb_vjetnlovptrw_WJets0_13TeV',
-    'CMS_vhbb_vjetnlovptrw_WJets1_13TeV',
-    'CMS_vhbb_vjetnlovptrw_WJets2_13TeV',
-    'CMS_vhbb_vjetnlovptrw_DYJets0_13TeV',
-    'CMS_vhbb_vjetnlovptrw_DYJets1_13TeV',
-    'CMS_vhbb_vjetnlovptrw_DYJets2_13TeV',
-    'CMS_vhbb_vjetnlovptrw_ZBJets1_13TeV',
-    'CMS_vhbb_vjetnlovptrw_ZBJets2_13TeV',
-    'CMS_vhbb_vjetnlovptrw_WBJets1_13TeV',
-    'CMS_vhbb_vjetnlovptrw_WBJets2_13TeV',
-    'CMS_vhbb_vjetnlovptrw_DYBJets1_13TeV',
-    'CMS_vhbb_vjetnlovptrw_DYBJets2_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_ZJets0_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_ZJets1_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_ZJets2_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_WJets0_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_WJets1_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_WJets2_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_DYJets0_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_DYJets1_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_DYJets2_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_ZBJets1_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_ZBJets2_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_WBJets1_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_WBJets2_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_DYBJets1_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_DYBJets2_13TeV',
 ;    'CMS_vhbb_vjetnlovptrw_p0_13TeV',
 ;    'CMS_vhbb_vjetnlovptrw_p1_13TeV',
 ;    'CMS_vhbb_vjetnlovptrw_naddjet0_p0_13TeV',
@@ -359,10 +359,10 @@ systematicsnaming = <!VHbbCommon|systematicsnaming!>
 
 
 removeWeightSystematics = {}
-
 List = SR_high1_Wen,SR_high2_Wen,SR_high1_Wmn,SR_high2_Wmn,Wlf_high_Wen,Wlf_high_Wmn,Whf_high_Wen,Whf_high_Wmn,ttbar_high_Wen,ttbar_high_Wmn,SR_med_Wen,SR_med_Wmn,Wlf_med_Wen,Wlf_med_Wmn,Whf_med_Wen,Whf_med_Wmn,ttbar_med_Wen,ttbar_med_Wmn,SR_high1_Wen_BOOST,SR_high2_Wen_BOOST,SR_high1_Wmn_BOOST,SR_high2_Wmn_BOOST,Wlf_high_Wen_BOOST,Wlf_high_Wmn_BOOST,Whf_high_Wmn_BOOST,Whf_high_Wen_BOOST,ttbar_high_Wmn_BOOST,ttbar_high_Wen_BOOST
-ListVZ = VV_SR_high1_Wen,VV_SR_high2_Wen,VV_SR_high1_Wmn,VV_SR_high2_Wmn,Wlf_high_Wen,Wlf_high_Wmn,VV_Whf_high_Wen,VV_Whf_high_Wmn,ttbar_high_Wen,ttbar_high_Wmn,VV_SR_med_Wen,VV_SR_med_Wmn,Wlf_med_Wen,Wlf_med_Wmn,VV_Whf_med_Wen,VV_Whf_med_Wmn,ttbar_med_Wen,ttbar_med_Wmn,VV_SR_high1_Wen_BOOST,VV_SR_high2_Wen_BOOST,VV_SR_high1_Wmn_BOOST,VV_SR_high2_Wmn_BOOST,Wlf_high_Wen_BOOST,Wlf_high_Wmn_BOOST,VV_Whf_high_Wmn_BOOST,VV_Whf_high_Wen_BOOST,ttbar_high_Wmn_BOOST,ttbar_high_Wen_BOOST 
+#List = VV_SR_high1_Wen,VV_SR_high2_Wen,VV_SR_high1_Wmn,VV_SR_high2_Wmn,VV_Wlf_high_Wen,VV_Wlf_high_Wmn,VV_Whf_high_Wen,VV_Whf_high_Wmn,VV_ttbar_high_Wen,VV_ttbar_high_Wmn,VV_SR_med_Wen,VV_SR_med_Wmn,VV_Wlf_med_Wen,VV_Wlf_med_Wmn,VV_Whf_med_Wen,VV_Whf_med_Wmn,VV_ttbar_med_Wen,VV_ttbar_med_Wmn,VV_SR_high1_Wen_BOOST,VV_SR_high2_Wen_BOOST,VV_SR_high1_Wmn_BOOST,VV_SR_high2_Wmn_BOOST,VV_Wlf_high_Wen_BOOST,VV_Wlf_high_Wmn_BOOST,VV_Whf_high_Wmn_BOOST,VV_Whf_high_Wen_BOOST,VV_ttbar_high_Wmn_BOOST,VV_ttbar_high_Wen_BOOST 
 
+#List = SR_high1_Wen,SR_high2_Wen,SR_high1_Wmn,SR_high2_Wmn,Wlf_high_Wen,Wlf_high_Wmn,Whf_high_Wen,Whf_high_Wmn,ttbar_high_Wen,ttbar_high_Wmn,SR_med_Wen,SR_med_Wmn,Wlf_med_Wen,Wlf_med_Wmn,Whf_med_Wen,Whf_med_Wmn,ttbar_med_Wen,ttbar_med_Wmn,SR_high1_Wen_BOOST,SR_high2_Wen_BOOST,SR_high1_Wmn_BOOST,SR_high2_Wmn_BOOST,Wlf_high_Wen_BOOST,Wlf_high_Wmn_BOOST,Whf_high_Wmn_BOOST,Whf_high_Wen_BOOST,ttbar_high_Wmn_BOOST,ttbar_high_Wen_BOOST,VV_SR_high1_Wen,VV_SR_high2_Wen,VV_SR_high1_Wmn,VV_SR_high2_Wmn,Wlf_high_Wen,Wlf_high_Wmn,VV_Whf_high_Wen,VV_Whf_high_Wmn,ttbar_high_Wen,ttbar_high_Wmn,VV_SR_med_Wen,VV_SR_med_Wmn,Wlf_med_Wen,Wlf_med_Wmn,VV_Whf_med_Wen,VV_Whf_med_Wmn,ttbar_med_Wen,ttbar_med_Wmn,VV_SR_high1_Wen_BOOST,VV_SR_high2_Wen_BOOST,VV_SR_high1_Wmn_BOOST,VV_SR_high2_Wmn_BOOST,Wlf_high_Wen_BOOST,Wlf_high_Wmn_BOOST,VV_Whf_high_Wmn_BOOST,VV_Whf_high_Wen_BOOST,ttbar_high_Wmn_BOOST,ttbar_high_Wen_BOOST
 
 # diboson list, use with: --set='LimitGeneral.List=<!LimitGeneral|ListVV!>'
 ListVV       = ttbar_medhigh_Wen,ttbar_medhigh_Wmn,Wlf_medhigh_Wen,Wlf_medhigh_Wmn,VV_Whf_medhigh_Wen,VV_Whf_medhigh_Wmn,VV_SR_medhigh_Wen,VV_SR_medhigh_Wmn
