--- a/python/Wlv2017config/general.ini
+++ b/python/Wlv2017config/general.ini
@@ -166,12 +166,12 @@ stitchingWeights_False  = DY_specialWeight
 stitchingWeights_True   = 1.0
 stitchingWeights        = <!Weights|stitchingWeights_<!.|useSpecialWeight!>!>
 
-#weightNLO        = weightLOtoNLO
+weightNLO        = weightLOtoNLO
 #weightNLO        = weightLOtoNLO_2016
 #weightNLO         = weightLOtoNLO_LHEVptV2
 #weightNLO         = weightLOtoNLO_LHEVptV2b
 #weightNLO         = weightLOtoNLO_LHEVptV6
-weightNLO         = weightLOtoNLO_LHEVptV7
+#weightNLO         = weightLOtoNLO_LHEVptV7
 
 weightJetPUID    = weightJetPUID
 weightNaddJetsResidual = 1.0 
