--- a/python/Wlv2017config/plots.ini
+++ b/python/Wlv2017config/plots.ini
@@ -55,9 +55,9 @@ VV_setup = VVHF,VVLF,ZJets_0b,ZJets_1b,ZJets_2b,WJets_0b,WJets_1b,WJets_2b,TT,ST
 # ------------------------------------------------------------------------------------------------------------------------------------------------------
 # plot regions 
 # ------------------------------------------------------------------------------------------------------------------------------------------------------
-#List         = <!.|ListVHLegacy!>
+List         = <!.|ListVHLegacy!>
 #List         = Whf_high_Wen,Whf_high_Wmn,Whf_med_Wen,Whf_med_Wmn,SR_med_Wen,SR_med_Wmn,SR_high1_Wen,SR_high1_Wmn,SR_high2_Wen,SR_high2_Wmn
-List = ttbar_medhigh_Wen,ttbar_medhigh_Wmn,Whf_medhigh_Wen,Whf_medhigh_Wmn,Wlf_medhigh_Wen,Wlf_medhigh_Wmn,SR_medhigh_Wen,SR_medhigh_Wmn
+;List = ttbar_medhigh_Wen,ttbar_medhigh_Wmn,Whf_medhigh_Wen,Whf_medhigh_Wmn,Wlf_medhigh_Wen,Wlf_medhigh_Wmn,SR_medhigh_Wen,SR_medhigh_Wmn
 
 ListVHLegacy = Wlf_med_Wen,Wlf_med_Wmn,Wlf_high_Wen,Wlf_high_Wmn,Whf_med_Wen,Whf_med_Wmn,Whf_high_Wen,Whf_high_Wmn,ttbar_med_Wen,ttbar_med_Wmn,ttbar_high_Wen,ttbar_high_Wmn,SR_med_Wen,SR_med_Wmn,SR_high1_Wen,SR_high1_Wmn,SR_high2_Wen,SR_high2_Wmn,<!.|ListBoosted!>
 
@@ -94,7 +94,7 @@ vars_inputs    = Hj0_btag,Hj1_btag,Hj0_btag_WP,Hj1_btag_WP,btagWP2D,Hmass_SR,Hpt
 
 
 vars_full      = <!.|vars_inputs!>,<!.|vars_general!>,<!.|vars_generator!>,<!.|vars_jets!>,<!.|vars_addJets!>,<!.|vars_MET!>,<!.|vars_j_MET!>,<!.|vars_H!>,<!.|vars_V!>,<!.|vars_VH!>,<!.|vars_pileup!>,<!.|vars_weights!>,<!.|vars_special!>,<!.|vars_DNN!>,<!.|vars_jets2!>
-vars_reduced   = <!.|vars_inputs!>,Heta,Hphi,Hmass_0to500,rawMET,tkMET,dPhi_MET_tkMET,min_MET_MHT,tkmetphi,METphi
+vars_reduced   = <!.|vars_inputs!>,Heta,Hphi,Hmass_0to500,rawMET,tkMET,dPhi_MET_tkMET,min_MET_MHT,tkmetphi,METphi,deltaRbb,deltaRbbWithFSR
 
 
 
