--- a/python/Zll2017config/cuts.ini
+++ b/python/Zll2017config/cuts.ini
@@ -147,6 +147,9 @@ SR_med_Zll      = <!Cuts|SR!> && <!Cuts|med!> && <!Cuts|Zll!>
 SR_med_Zll_0j   = <!Cuts|SR!> && <!Cuts|med!> && <!Cuts|Zll!> && <!Cuts|0j!>
 SR_med_Zll_ge1j = <!Cuts|SR!> && <!Cuts|med!> && <!Cuts|Zll!> && <!Cuts|ge1j!>
 SR_high_Zll     = <!Cuts|SR!> && <!Cuts|high!> && <!Cuts|Zll!>
+SR_high1_Zll     = <!Cuts|SR!> && <!Cuts|Zll!> && <!Cuts|high1!>
+SR_high2_Zll     = <!Cuts|SR!> && <!Cuts|Zll!> && <!Cuts|high2!>
+
 
 ; e/u low/high pt (fit)
 SR_low_Zmm      = <!Cuts|SR!> && <!Cuts|Zmm!> && <!Cuts|low!>
@@ -469,8 +472,6 @@ SR_high_Zmm_BOOST    = <!Cuts|Signal_BOOSTv3!> && <!Cuts|Zmm!>
 SR_high1_Zmm_BOOST    = <!Cuts|Signal_BOOSTv3_1!> && <!Cuts|Zmm!>
 SR_high2_Zmm_BOOST    = <!Cuts|Signal_BOOSTv3_2!> && <!Cuts|Zmm!>
 
-
-
 ttbar_high_Zee_BOOST = <!Cuts|tt_BOOST!> && <!Cuts|Zee!>
 VV_ttbar_high_Zee_BOOST = <!Cuts|VV_tt_BOOST!> && <!Cuts|Zee!>
 ttbar_high_Zmm_BOOST = <!Cuts|tt_BOOST!> && <!Cuts|Zmm!>
@@ -491,6 +492,8 @@ SR_high_Zll_BOOST    = <!Cuts|Signal_BOOSTv3!>
 ttbar_high_Zll_BOOST = <!Cuts|tt_BOOST!>
 Zlf_high_Zll_BOOST   = <!Cuts|Zlf_BOOSTv11!>
 Zhf_high_Zll_BOOST   = <!Cuts|Zhf_BOOSTv2!>
+SR_high1_Zll_BOOST    = <!Cuts|Signal_BOOSTv3_1!> 
+SR_high2_Zll_BOOST    = <!Cuts|Signal_BOOSTv3_2!> 
 
 
 [mjjAnalysis]
