--- a/python/Zll2017config/datacards.ini
+++ b/python/Zll2017config/datacards.ini
@@ -95,42 +95,42 @@ weightF_sys = [
 ;    'TEST_vhbb_BtagMjj_TM_120_130',
 ;    'TEST_vhbb_BtagMjj_TM_130_140',
 ;    'TEST_vhbb_BtagMjj_TM_140_150',
-    'CMS_vhbb_VjetsStitching100_2017_13TeV',
-    'CMS_vhbb_VjetsBenriched_DYBJets_2017_13TeV',
-    'CMS_vhbb_VjetsBenriched_DYJetsBGenFilter_2017_13TeV',
-    'CMS_vhbb_VjetsBenriched_DYBJets_RW_2017_13TeV',
-    'CMS_vhbb_VjetsBenriched_DYJetsBGenFilter_RW_2017_13TeV',
-    'CMS_vhbb_Vjets_DYBJets_RW_2017_13TeV',
-    'CMS_vhbb_Vjets_DYJetsBGenFilter_RW_2017_13TeV',
-    'CMS_vhbb_Vjets_minJetPt',
+;    'CMS_vhbb_VjetsStitching100_2017_13TeV',
+;    'CMS_vhbb_VjetsBenriched_DYBJets_2017_13TeV',
+;    'CMS_vhbb_VjetsBenriched_DYJetsBGenFilter_2017_13TeV',
+;    'CMS_vhbb_VjetsBenriched_DYBJets_RW_2017_13TeV',
+;    'CMS_vhbb_VjetsBenriched_DYJetsBGenFilter_RW_2017_13TeV',
+;    'CMS_vhbb_Vjets_DYBJets_RW_2017_13TeV',
+;    'CMS_vhbb_Vjets_DYJetsBGenFilter_RW_2017_13TeV',
+;    'CMS_vhbb_Vjets_minJetPt',
     'CMS_vhbb_Vpt150_13TeV',
     'CMS_vhbb_Vpt250_13TeV',
-    'CMS_vhbb_DeepCSV_TT',
-    'CMS_vhbb_DeepCSV_TM',
-    'CMS_vhbb_DeepCSV_TL',
-    'CMS_vhbb_DeepCSV_MM',
-    'CMS_vhbb_DeepCSV_ML',
-    'CMS_vhbb_DeepCSV_LL',
+;    'CMS_vhbb_DeepCSV_TT',
+;    'CMS_vhbb_DeepCSV_TM',
+;    'CMS_vhbb_DeepCSV_TL',
+;    'CMS_vhbb_DeepCSV_MM',
+;    'CMS_vhbb_DeepCSV_ML',
+;    'CMS_vhbb_DeepCSV_LL',
 ; LO to NLO weight
 ;    'CMS_vhbb_DY_NLO_weight',
-;    'CMS_vhbb_vjetnlodetajjrw_13TeV',
+    'CMS_vhbb_vjetnlodetajjrw_13TeV',
 ; 2017 version
-    'CMS_vhbb_vjetnlovptrw_13TeV',
-    'CMS_vhbb_vjetnlovptrw_ZJets0_13TeV',
-    'CMS_vhbb_vjetnlovptrw_ZJets1_13TeV',
-    'CMS_vhbb_vjetnlovptrw_ZJets2_13TeV',
-    'CMS_vhbb_vjetnlovptrw_WJets0_13TeV',
-    'CMS_vhbb_vjetnlovptrw_WJets1_13TeV',
-    'CMS_vhbb_vjetnlovptrw_WJets2_13TeV',
-    'CMS_vhbb_vjetnlovptrw_DYJets0_13TeV',
-    'CMS_vhbb_vjetnlovptrw_DYJets1_13TeV',
-    'CMS_vhbb_vjetnlovptrw_DYJets2_13TeV',
-    'CMS_vhbb_vjetnlovptrw_ZBJets1_13TeV',
-    'CMS_vhbb_vjetnlovptrw_ZBJets2_13TeV',
-    'CMS_vhbb_vjetnlovptrw_WBJets1_13TeV',
-    'CMS_vhbb_vjetnlovptrw_WBJets2_13TeV',
-    'CMS_vhbb_vjetnlovptrw_DYBJets1_13TeV',
-    'CMS_vhbb_vjetnlovptrw_DYBJets2_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_ZJets0_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_ZJets1_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_ZJets2_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_WJets0_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_WJets1_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_WJets2_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_DYJets0_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_DYJets1_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_DYJets2_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_ZBJets1_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_ZBJets2_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_WBJets1_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_WBJets2_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_DYBJets1_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_DYBJets2_13TeV',
 ;    'CMS_vhbb_vjetnlovptrw_p0_13TeV',
 ;    'CMS_vhbb_vjetnlovptrw_p1_13TeV',
 ;    'CMS_vhbb_vjetnlovptrw_naddjet0_p0_13TeV',
@@ -383,8 +383,8 @@ systematicsnaming = <!VHbbCommon|systematicsnaming!>
 removeWeightSystematics = {}
 
 
+;List         = <!.|ListVZ!>
 List         = <!.|ListVHLegacy!>
-;List         = <!.|ListVHLegacy!>
 ;List         = <!.|ListVHLegacy_SR!>
 ;List         = <!.|ListVHLegacy!>
 ;List         = <!.|List_BOOSToverlap!>
@@ -395,10 +395,10 @@ ListVHLegacy = SR_low_Zmm,SR_low_Zee,SR_med_Zmm_0j,SR_med_Zee_0j,SR_med_Zmm_ge1j
 
 ;ListVHLegacy_VZ = VV_SR_low_Zmm,VV_SR_low_Zee,VV_SR_med_Zmm_0j,VV_SR_med_Zee_0j,VV_SR_med_Zmm_ge1j,VV_SR_med_Zee_ge1j,VV_SR_high_Zmm,VV_SR_high1_Zmm,VV_SR_high2_Zmm,VV_SR_high_Zee,VV_SR_high1_Zee,VV_SR_high2_Zee,VV_Zlf_low_Zmm,VV_Zlf_low_Zee,VV_Zlf_med_Zmm,VV_Zlf_med_Zee,VV_Zlf_high_Zmm,VV_Zlf_high_Zee,VV_Zhf_low_Zmm,VV_Zhf_low_Zee,VV_Zhf_med_Zmm,VV_Zhf_med_Zee,VV_Zhf_high_Zmm,VV_Zhf_high_Zee,VV_ttbar_low_Zmm,VV_ttbar_low_Zee,VV_ttbar_med_Zmm,VV_ttbar_med_Zee,VV_ttbar_high_Zmm,VV_ttbar_high_Zee
 
-ListVZ = VV_SR_low_Zmm,VV_SR_low_Zee,VV_SR_med_Zmm_0j,VV_SR_med_Zee_0j,VV_SR_med_Zmm_ge1j,VV_SR_med_Zee_ge1j,VV_SR_high1_Zmm,VV_SR_high2_Zmm,VV_SR_high1_Zee,VV_SR_high2_Zee,Zlf_low_Zmm,Zlf_low_Zee,Zlf_med_Zmm,Zlf_med_Zee,Zlf_high_Zmm,Zlf_high_Zee,VV_Zhf_low_Zmm,VV_Zhf_low_Zee,VV_Zhf_med_Zmm,VV_Zhf_med_Zee,VV_Zhf_high_Zmm,VV_Zhf_high_Zee,ttbar_low_Zmm,ttbar_low_Zee,ttbar_med_Zmm,ttbar_med_Zee,ttbar_high_Zmm,ttbar_high_Zee,VV_SR_high1_Zee_BOOST,VV_SR_high2_Zee_BOOST,VV_SR_high1_Zmm_BOOST,VV_SR_high2_Zmm_BOOST,Zlf_high_Zee_BOOST,Zlf_high_Zmm_BOOST,VV_Zhf_high_Zmm_BOOST,VV_Zhf_high_Zee_BOOST,ttbar_high_Zmm_BOOST,ttbar_high_Zee_BOOST 
+ListVZ = VV_SR_low_Zmm,VV_SR_low_Zee,VV_SR_med_Zmm_0j,VV_SR_med_Zee_0j,VV_SR_med_Zmm_ge1j,VV_SR_med_Zee_ge1j,VV_SR_high1_Zmm,VV_SR_high2_Zmm,VV_SR_high1_Zee,VV_SR_high2_Zee,VV_Zlf_low_Zmm,VV_Zlf_low_Zee,VV_Zlf_med_Zmm,VV_Zlf_med_Zee,VV_Zlf_high_Zmm,VV_Zlf_high_Zee,VV_Zhf_low_Zmm,VV_Zhf_low_Zee,VV_Zhf_med_Zmm,VV_Zhf_med_Zee,VV_Zhf_high_Zmm,VV_Zhf_high_Zee,VV_ttbar_low_Zmm,VV_ttbar_low_Zee,VV_ttbar_med_Zmm,VV_ttbar_med_Zee,VV_ttbar_high_Zmm,VV_ttbar_high_Zee,VV_SR_high1_Zee_BOOST,VV_SR_high2_Zee_BOOST,VV_SR_high1_Zmm_BOOST,VV_SR_high2_Zmm_BOOST,VV_Zlf_high_Zee_BOOST,VV_Zlf_high_Zmm_BOOST,VV_Zhf_high_Zmm_BOOST,VV_Zhf_high_Zee_BOOST,VV_ttbar_high_Zmm_BOOST,VV_ttbar_high_Zee_BOOST 
 
 
-List_BOOSToverlap = SR_high1_Zee_BOOST,SR_high2_Zee_BOOST,SR_high1_Zmm_BOOST,SR_high2_Zmm_BOOST,Zlf_high_Zee_BOOST,Zlf_high_Zmm_BOOST,Zhf_high_Zmm_BOOST,Zhf_high_Zee_BOOST,ttbar_high_Zmm_BOOST,ttbar_high_Zee_BOOST
+;List_BOOSToverlap = SR_high1_Zee_BOOST,SR_high2_Zee_BOOST,SR_high1_Zmm_BOOST,SR_high2_Zmm_BOOST,Zlf_high_Zee_BOOST,Zlf_high_Zmm_BOOST,Zhf_high_Zmm_BOOST,Zhf_high_Zee_BOOST,ttbar_high_Zmm_BOOST,ttbar_high_Zee_BOOST
 
 ;List_BOOSToverlap_VZ = VV_SR_high_Zee_BOOST,VV_SR_high1_Zee_BOOST,VV_SR_high2_Zee_BOOST,VV_SR_high_Zmm_BOOST,VV_SR_high1_Zmm_BOOST,VV_SR_high2_Zmm_BOOST,VV_Zlf_high_Zee_BOOST,VV_Zlf_high_Zmm_BOOST,VV_Zhf_high_Zmm_BOOST,VV_Zhf_high_Zee_BOOST,VV_ttbar_high_Zmm_BOOST,VV_ttbar_high_Zee_BOOST
 
