--- a/python/Zll2017config/plots.ini
+++ b/python/Zll2017config/plots.ini
@@ -34,6 +34,7 @@ additionalText_lowmedhigh = " full p_{T}(V) range"
 muData = ['DoubleMuon']
 eData  = ['DoubleEG']
 Data   = ['DoubleEG','DoubleMuon']
+#Data   = []
 
 # ------------------------------------------------------------------------------------------------------------------------------------------------------
 # MC samples definitions
@@ -46,6 +47,7 @@ allBKG = <!Samples|TT!>,<!Samples|ST!>,<!Samples|VV!>,<!Samples|DY!>
 #VZ
 #Plot_general.allSIG=<!.|VVSIG!>;.allBKG=<!.|VVBKG!>
 samples = [<!Plot_general|allBKG!>,<!Plot_general|allSIG!>]
+#samples = [<!Samples|DY!>]
 
 allSIG_noSTXS = 'ZH_Zll','ZH_Znunu','ggZH_Zll','ggZH_Znunu','WplusH','WminusH'
 
@@ -76,11 +78,12 @@ setupLog       = <!.|setup!>
 # plot regions 
 # ------------------------------------------------------------------------------------------------------------------------------------------------------
 ; !!! use --regions argument instead of modifying this list if possible !!!
-#List         = <!.|ListVHLegacy!>
+List         = <!.|ListVHLegacy!>
 #List         = <!.|ListVHLegacy_debug!>
-List = Zhf_lowmedhigh_Zmm,Zhf_lowmedhigh_Zee,SR_lowmedhigh_Zee,SR_lowmedhigh_Zmm,Zlf_lowmedhigh_Zmm,Zlf_lowmedhigh_Zee,ttbar_lowmedhigh_Zmm,ttbar_lowmedhigh_Zee
+#List = Zhf_lowmedhigh_Zmm,Zhf_lowmedhigh_Zee,SR_lowmedhigh_Zee,SR_lowmedhigh_Zmm,Zlf_lowmedhigh_Zmm,Zlf_lowmedhigh_Zee,ttbar_lowmedhigh_Zmm,ttbar_lowmedhigh_Zee
 
-ListVHLegacy = SR_low_Zmm,SR_low_Zee,SR_med_Zmm_0j,SR_med_Zee_0j,SR_med_Zmm_ge1j,SR_med_Zee_ge1j,SR_high1_Zmm,SR_high2_Zmm,SR_high1_Zee,SR_high2_Zee,Zlf_low_Zmm,Zlf_low_Zee,Zlf_med_Zmm,Zlf_med_Zee,Zlf_high_Zmm,Zlf_high_Zee,Zhf_low_Zmm,Zhf_low_Zee,Zhf_med_Zmm,Zhf_med_Zee,Zhf_high_Zmm,Zhf_high_Zee,ttbar_low_Zmm,ttbar_low_Zee,ttbar_med_Zmm,ttbar_med_Zee,ttbar_high_Zmm,ttbar_high_Zee,SR_high1_Zee_BOOST,SR_high2_Zee_BOOST,SR_high1_Zmm_BOOST,SR_high2_Zmm_BOOST,Zlf_high_Zee_BOOST,Zlf_high_Zmm_BOOST,Zhf_high_Zmm_BOOST,Zhf_high_Zee_BOOST,ttbar_high_Zmm_BOOST,ttbar_high_Zee_BOOST
+#ListVHLegacy = SR_low_Zmm,SR_low_Zee,SR_med_Zmm_0j,SR_med_Zee_0j,SR_med_Zmm_ge1j,SR_med_Zee_ge1j,SR_high1_Zmm,SR_high2_Zmm,SR_high1_Zee,SR_high2_Zee,Zlf_low_Zmm,Zlf_low_Zee,Zlf_med_Zmm,Zlf_med_Zee,Zlf_high_Zmm,Zlf_high_Zee,Zhf_low_Zmm,Zhf_low_Zee,Zhf_med_Zmm,Zhf_med_Zee,Zhf_high_Zmm,Zhf_high_Zee,ttbar_low_Zmm,ttbar_low_Zee,ttbar_med_Zmm,ttbar_med_Zee,ttbar_high_Zmm,ttbar_high_Zee,SR_high1_Zee_BOOST,SR_high2_Zee_BOOST,SR_high1_Zmm_BOOST,SR_high2_Zmm_BOOST,Zlf_high_Zee_BOOST,Zlf_high_Zmm_BOOST,Zhf_high_Zmm_BOOST,Zhf_high_Zee_BOOST,ttbar_high_Zmm_BOOST,ttbar_high_Zee_BOOST
+ListVHLegacy = SR_low_Zll,SR_med_Zll_0j,SR_med_Zll_ge1j,SR_high1_Zll,SR_high2_Zll,Zlf_low_Zll,Zlf_med_Zll,Zlf_high_Zll,Zhf_low_Zll,Zhf_med_Zll,Zhf_high_Zll,ttbar_low_Zll,ttbar_med_Zll,ttbar_high_Zll,SR_high1_Zll_BOOST,SR_high2_Zll_BOOST,Zlf_high_Zll_BOOST,Zhf_high_Zll_BOOST,ttbar_high_Zll_BOOST
 
 ListVH       = <!.|ListVHLegacy!> 
 ListMulti    = Multi_medhigh_Zll,Multi_low_Zll
@@ -116,7 +119,7 @@ vars_inputs    = Hj0_btag,Hj1_btag,Hj0_btag_WP,Hj1_btag_WP,btagWP2D,kinFit_H_mas
 
 vars_full      = <!.|vars_inputs!>,<!.|vars_general!>,<!.|vars_generator!>,<!.|vars_jets!>,<!.|vars_addJets!>,<!.|vars_MET!>,<!.|vars_j_MET!>,<!.|vars_H!>,<!.|vars_V!>,<!.|vars_VH!>,<!.|vars_pileup!>,<!.|vars_weights!>,<!.|vars_special!>,<!.|vars_DNN!>,<!.|vars_jets2!>,Hmasslin,Heta,Hphi,Hmass_0to500,rawMET,tkMET,dPhi_MET_tkMET,min_MET_MHT,tkmetphi,HT20_600,e0pt,e0phi,e0eta,e1pt,e1phi,e1eta,DNNlow,Vpt_low
 
-vars_reduced   = <!.|vars_inputs!>,<!.|vars_weights!>,btagWP2D,count,countNoWeight,countGenWeight,Vtype,parity,parityBDTDNN,Veta,Vphi,e0pt,e1pt,m0pt,m1pt,<!.|vars_pileup!>
+vars_reduced   = <!.|vars_inputs!>,<!.|vars_weights!>,btagWP2D,count,countNoWeight,countGenWeight,Vtype,parity,parityBDTDNN,Veta,Vphi,e0pt,e1pt,m0pt,m1pt,<!.|vars_pileup!>,deltaRbbWithFSR,deltaEtabbWithFSR
 
 
 #----- Boosted analysis plots -----#
@@ -127,7 +130,7 @@ var_Boost = Vpt,FatJet_mSD,FatJet_Pt,DeepAK8_bbVSlight,BDT_Zll_BOOSTFinal_wdB,BD
 
 # reduced list
 var            = <!.|vars_reduced!>
-#var            = kinFit_V_pt
+#var            = genWeight
 
 
 
