--- a/python/Zvv2017config/datacards.ini
+++ b/python/Zvv2017config/datacards.ini
@@ -51,19 +51,19 @@ weightF_sys = [
 ;    'TEST_vhbb_BtagMjj_TM_120_130',
 ;    'TEST_vhbb_BtagMjj_TM_130_140',
 ;    'TEST_vhbb_BtagMjj_TM_140_150',
-    'CMS_vhbb_VjetsBenriched_ZBJets_2017_13TeV',
-    'CMS_vhbb_VjetsBenriched_ZJetsBGenFilter_2017_13TeV',
-    'CMS_vhbb_VjetsBenriched_ZBJets_RW_2017_13TeV',
-    'CMS_vhbb_VjetsBenriched_ZJetsBGenFilter_RW_2017_13TeV',
-    'CMS_vhbb_Vjets_ZBJets_RW_2017_13TeV',
-    'CMS_vhbb_Vjets_ZJetsBGenFilter_RW_2017_13TeV',
-    'CMS_vhbb_VjetsBenriched_WBJets_2017_13TeV',
-    'CMS_vhbb_VjetsBenriched_WJetsBGenFilter_2017_13TeV',
-    'CMS_vhbb_VjetsBenriched_WBJets_RW_2017_13TeV',
-    'CMS_vhbb_VjetsBenriched_WJetsBGenFilter_RW_2017_13TeV',
-    'CMS_vhbb_Vjets_WBJets_RW_2017_13TeV',
-    'CMS_vhbb_Vjets_WJetsBGenFilter_RW_2017_13TeV',
-    'CMS_vhbb_Vjets_minJetPt',
+;    'CMS_vhbb_VjetsBenriched_ZBJets_2017_13TeV',
+;    'CMS_vhbb_VjetsBenriched_ZJetsBGenFilter_2017_13TeV',
+;    'CMS_vhbb_VjetsBenriched_ZBJets_RW_2017_13TeV',
+;    'CMS_vhbb_VjetsBenriched_ZJetsBGenFilter_RW_2017_13TeV',
+;    'CMS_vhbb_Vjets_ZBJets_RW_2017_13TeV',
+;    'CMS_vhbb_Vjets_ZJetsBGenFilter_RW_2017_13TeV',
+;    'CMS_vhbb_VjetsBenriched_WBJets_2017_13TeV',
+;    'CMS_vhbb_VjetsBenriched_WJetsBGenFilter_2017_13TeV',
+;    'CMS_vhbb_VjetsBenriched_WBJets_RW_2017_13TeV',
+;    'CMS_vhbb_VjetsBenriched_WJetsBGenFilter_RW_2017_13TeV',
+;    'CMS_vhbb_Vjets_WBJets_RW_2017_13TeV',
+;    'CMS_vhbb_Vjets_WJetsBGenFilter_RW_2017_13TeV',
+;    'CMS_vhbb_Vjets_minJetPt',
 ;2017 run era weight
     'CMS_vhbb_Vpt150_13TeV',
     'CMS_vhbb_Vpt250_13TeV',
@@ -72,34 +72,34 @@ weightF_sys = [
     'CMS_vhbb_runEra2017D',
     'CMS_vhbb_runEra2017E',
     'CMS_vhbb_runEra2017F',
-    'CMS_vhbb_DeepCSV_TT',
-    'CMS_vhbb_DeepCSV_TM',
-    'CMS_vhbb_DeepCSV_TL',
-    'CMS_vhbb_DeepCSV_MM',
-    'CMS_vhbb_DeepCSV_ML',
-    'CMS_vhbb_DeepCSV_LL',
+;    'CMS_vhbb_DeepCSV_TT',
+;    'CMS_vhbb_DeepCSV_TM',
+;    'CMS_vhbb_DeepCSV_TL',
+;    'CMS_vhbb_DeepCSV_MM',
+;    'CMS_vhbb_DeepCSV_ML',
+;    'CMS_vhbb_DeepCSV_LL',
 ; DEFAULT shape uncertainties
 ;top pt reweighting
 ;    'CMS_vhbb_topptreweighting_13TeV',
 ; LO to NLO weight
-;    'CMS_vhbb_vjetnlodetajjrw_13TeV',
+    'CMS_vhbb_vjetnlodetajjrw_13TeV',
 ; 2017 version
-    'CMS_vhbb_vjetnlovptrw_13TeV',
-    'CMS_vhbb_vjetnlovptrw_ZJets0_13TeV',
-    'CMS_vhbb_vjetnlovptrw_ZJets1_13TeV',
-    'CMS_vhbb_vjetnlovptrw_ZJets2_13TeV',
-    'CMS_vhbb_vjetnlovptrw_WJets0_13TeV',
-    'CMS_vhbb_vjetnlovptrw_WJets1_13TeV',
-    'CMS_vhbb_vjetnlovptrw_WJets2_13TeV',
-    'CMS_vhbb_vjetnlovptrw_DYJets0_13TeV',
-    'CMS_vhbb_vjetnlovptrw_DYJets1_13TeV',
-    'CMS_vhbb_vjetnlovptrw_DYJets2_13TeV',
-    'CMS_vhbb_vjetnlovptrw_ZBJets1_13TeV',
-    'CMS_vhbb_vjetnlovptrw_ZBJets2_13TeV',
-    'CMS_vhbb_vjetnlovptrw_WBJets1_13TeV',
-    'CMS_vhbb_vjetnlovptrw_WBJets2_13TeV',
-    'CMS_vhbb_vjetnlovptrw_DYBJets1_13TeV',
-    'CMS_vhbb_vjetnlovptrw_DYBJets2_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_ZJets0_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_ZJets1_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_ZJets2_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_WJets0_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_WJets1_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_WJets2_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_DYJets0_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_DYJets1_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_DYJets2_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_ZBJets1_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_ZBJets2_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_WBJets1_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_WBJets2_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_DYBJets1_13TeV',
+;    'CMS_vhbb_vjetnlovptrw_DYBJets2_13TeV',
 ;    'CMS_vhbb_vjetnlovptrw_p0_13TeV',
 ;    'CMS_vhbb_vjetnlovptrw_p1_13TeV',
 ;    'CMS_vhbb_vjetnlovptrw_naddjet0_p0_13TeV',
@@ -366,10 +366,10 @@ removeWeightSystematics = {'Zee': ['CMS_vhbb_eff_m_13TeV', 'CMS_vhbb_eff_m_trigg
 ptRegionsDict = {'HighPt': ['Znn_13TeV_Signal','Znn_13TeV_Zlight','Znn_13TeV_Zbb','Znn_13TeV_TT']}
 
 # datacard CR+SR
-;List         = <!.|ListVHLegacy!>,<!.|List_BOOSToverlap!> 
-;List         = <!.|List_BOOSToverlap!> 
 List         = <!.|ListVH_resolved!>,<!.|ListVH_boosted!> 
-ListVZ       = VV_SR_med_Znn_0j,VV_Zhf_med_Znn,Zlf_med_Znn,ttbar_med_Znn,VV_SR_med_Znn_ge1j,VV_SR_high1_Znn,VV_SR_high2_Znn,VV_Zhf_high_Znn,Zlf_high_Znn,ttbar_high_Znn,VV_SR_high1_Znn_BOOST,VV_SR_high2_Znn_BOOST,Zlf_high_Znn_BOOST,VV_Zhf_high_Znn_BOOST,ttbar_high_Znn_BOOST
+;List         = <!.|List_BOOSToverlap!> 
+;List         = <!.|ListVZ!> 
+ListVZ       = VV_SR_med_Znn_0j,VV_Zhf_med_Znn,VV_Zlf_med_Znn,VV_ttbar_med_Znn,VV_SR_med_Znn_ge1j,VV_SR_high1_Znn,VV_SR_high2_Znn,VV_Zhf_high_Znn,VV_Zlf_high_Znn,VV_ttbar_high_Znn,VV_SR_high1_Znn_BOOST,VV_SR_high2_Znn_BOOST,VV_Zlf_high_Znn_BOOST,VV_Zhf_high_Znn_BOOST,VV_ttbar_high_Znn_BOOST
 
 
 ListVH_resolved = SR_med_Znn_0j,Zhf_med_Znn,Zlf_med_Znn,ttbar_med_Znn,SR_med_Znn_ge1j,SR_high1_Znn,SR_high2_Znn,Zhf_high_Znn,Zlf_high_Znn,ttbar_high_Znn
