--- a/python/Zvv2017config/general.ini
+++ b/python/Zvv2017config/general.ini
@@ -134,7 +134,8 @@ useSpecialWeight = True
 
 weightQCD        = 1.0
 weightEWK        = EWKw[0]
-weightNLO        = weightLOtoNLO_LHEVptV7
+#weightNLO        = weightLOtoNLO_LHEVptV7
+weightNLO        = weightLOtoNLO
 weightTT         = 1.0
 weightPU         = puWeight
 doubleBtagWeight = (1.0+<!General|DeepAK8weightApplies!>*(-1.0+bTagWeightDoubleB))
