--- a/python/Zvv2017config/plots.ini
+++ b/python/Zvv2017config/plots.ini
@@ -33,7 +33,7 @@ vars_DNN      = VV_DNN1,VV_BDT1
 
 # standard sets
 varsfull      = <!.|vars_inputs!>,<!.|vars_general!>,<!.|vars_generator!>,<!.|vars_jets!>,<!.|vars_addJets!>,<!.|vars_MET!>,<!.|vars_j_MET!>,<!.|vars_H!>,<!.|vars_V!>,<!.|vars_VH!>,<!.|vars_pileup!>,<!.|vars_weights!>,<!.|vars_special!>,<!.|vars_DNN!>,<!.|vars_jets2!>
-vars_reduced   = <!.|vars_inputs!>,<!.|vars_general!>,Heta,Hphi,dPhi_MET_tkMET,min_MET_MHT,tkmetphi,METphi,nAddJetCloseToMET,nAddJetFarFromMET,nAddJetTransverse,Hmass_noFSR,Hpt_noFSR,nFSRrecovered,Vmt,Vmt_ext,nVertices,rho,Hmass_0to900,Hmass_0to500
+vars_reduced   = <!.|vars_inputs!>,<!.|vars_general!>,Heta,Hphi,dPhi_MET_tkMET,min_MET_MHT,tkmetphi,METphi,nAddJetCloseToMET,nAddJetFarFromMET,nAddJetTransverse,Hmass_noFSR,Hpt_noFSR,nFSRrecovered,Vmt,Vmt_ext,nVertices,rho,Hmass_0to900,Hmass_0to500,Vpt,deltaRbbWithFSR,deltaRbb
 
 #----- Boosted analysis plots -----#
 #var_additionalBTAGALGOS: BDT_VZ_Zvv_BOOSTFinal_wdB
@@ -42,6 +42,7 @@ var_Boost: Vpt,FatJet_mSD,FatJet_Pt,DeepAK8_bbVSlight,BDT_Zvv_BOOSTFinal_wdB,BDT
 
 vars            = <!.|vars_reduced!>
 var             = <!.|vars!>
+#var             = genWeight
 
 # ------------------------------------------------------------------------------------------------------------------------------------------------------
 # data 
@@ -63,6 +64,7 @@ allBKGwithQCD = <!Samples|VV!>,<!Samples|ZJets!>,<!Samples|WJets!>,<!Samples|DY!
 
 # to plot with QCD: --set='Plot_general.samples=[<!Plot_general|allBKGwithQCD!>,<!Plot_general|allSIG!>]'
 samples = [<!Plot_general|allBKG!>,<!Plot_general|allSIG!>]
+#samples = []
 
 # diboson analysis
 # _1b cats are empty
@@ -91,8 +93,8 @@ controlSample = {"HighPt_Signal": 0,"HighPt_TT":1,"HighPt_Zlight":2,"HighPt_Zbb"
 addOverFlow = False
 
 # List of regions to be submitted in case of batch submission
-#List         = <!.|ListVHLegacy!>
-List         = ttbar_medhigh_Znn,Zlf_medhigh_Znn,Zhf_medhigh_Znn,SR_medhigh_Znn 
+List         = <!.|ListVHLegacy!>
+#List         = ttbar_medhigh_Znn,Zlf_medhigh_Znn,Zhf_medhigh_Znn,SR_medhigh_Znn 
 
 ListVH       = <!.|ListVHLegacy!>
 ListVHLegacy = SR_med_Znn_0j,SR_med_Znn_ge1j,ttbar_med_Znn,Zlf_med_Znn,Zhf_med_Znn,SR_high1_Znn,ttbar_high_Znn,Zlf_high_Znn,Zhf_high_Znn,SR_high2_Znn,<!.|ListBoosted!>
