--- a/python/Zll2017config/general.ini
+++ b/python/Zll2017config/general.ini
@@ -131,7 +131,8 @@ puWeight         = puWeight
 weightPU         = <!.|puWeight!>
 genWeight        = genWeight
 #weightNLO        = weightLOtoNLO_LHEVptV6
-weightNLO        = weightLOtoNLO_LHEVptV7
+#weightNLO        = weightLOtoNLO_LHEVptV7
+weightNLO        = weightLOtoNLO
 #ewkWeight        = (1*((sampleIndex>=13000&&sampleIndex<=13800)||(sampleIndex>=6000&&sampleIndex<=7100)||(sampleIndex>=17000&&sampleIndex<=17700)) + EWKw[0]*(((sampleIndex>=13000&&sampleIndex<=13800)||(sampleIndex>=6000&&sampleIndex<=7100)||(sampleIndex>=17000&&sampleIndex<=17700))==0))
 ewkWeight        = EWKw[0]
 weightEWK        = <!.|ewkWeight!> 
